# CBOS

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile
.cargo/: config.toml
src/: exceptions.rs  gdt.rs  hal.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  prelude.rs  programs.rs  shell.rs  tests.rs  util.rs  vga.rs
src/concurrency/: mod.rs
src/exceptions/: tests.rs
src/memory/: allocator.rs  mod.rs
src/programs/: shell.rs  statusline.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs  timer.rs
src/util/: ps2_scancodes.rs
src/vga/: .advanced_writers.rs.rustfmt  area.rs  functions.rs  macros.rs  mod.rs  primitives.rs  tests.rs  traits.rs  view.rs  writer.rs
src/vga/writer/: color.rs  rolling.rs  subarea.rs  validator.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
